# ML_LAB_3rdYear

./: README.md  main.py  pyproject.toml  requirements.txt  testgpy.ipynb
Week1/: w1.ipynb
week10/: kmeans.ipynb
week11/: Aglo.ipynb
week12/: adaboost.ipynb  income.csv
week13/: cnnimple.ipynb  cnnwithTorch.ipynb
week2/: seabornImpl.ipynb  visualisation.ipynb
week3/: PlotlyAndcufflinks.ipynb  plotly.ipynb
week3/.ipynb_checkpoints/: plotly-checkpoint.ipynb
week4/: vis1.ipynb
week4/.ipynb_checkpoints/: vis1-checkpoint.ipynb
week5/: logistic.ipynb
week6/: decisionTree.ipynb
week7/: knn.ipynb
week8/: naiveB.ipynb
week9/: svm_data.csv  svm_implementation.ipynb
